RESOLVED FIXED81412
REGRESSION (r107435) Copy a link and paste to Mail: nothing is pasted
https://bugs.webkit.org/show_bug.cgi?id=81412
Summary REGRESSION (r107435) Copy a link and paste to Mail: nothing is pasted
Brady Eidson
Reported 2012-03-16 14:51:37 PDT
REGRESSION (r107435) Copy a link and paste to Mail: nothing is pasted Before 107435: NSURL *URL = [NSURL URLFromPasteboard:m_pasteboard.get()]; After 107435: NSURL *URL = [NSURL URLWithString:platformStrategies()->pasteboardStrategy()->stringForType(NSURLPboardType, m_pasteboardName)]; The data format for the Apple URL pasteboard type is an XML plist and the URLFromPasteboard API is the only way to be guaranteed to be able to parse it. Patch forthcoming. In radar as <rdar://problem/11027997>
Attachments
Patch v1 - Fix plus API test (21.75 KB, patch)
2012-03-16 14:57 PDT, Brady Eidson
ggaren: review+
Brady Eidson
Comment 1 2012-03-16 14:57:47 PDT
Created attachment 132388 [details] Patch v1 - Fix plus API test
Geoffrey Garen
Comment 2 2012-03-16 15:12:23 PDT
Comment on attachment 132388 [details] Patch v1 - Fix plus API test r=me
Brady Eidson
Comment 3 2012-03-16 15:30:55 PDT
Jeremy Huddleston Sequoia
Comment 4 2012-03-17 16:13:51 PDT
This is still happening in r111120
Brady Eidson
Comment 5 2012-03-17 18:08:28 PDT
(In reply to comment #4) > This is still happening in r111120 This particular bug was on the receiving app's end. Were you running Mail against the WebKit nightly, or were you just running Safari against the WebKit nightly?
Jeremy Huddleston Sequoia
Comment 6 2012-03-17 18:45:43 PDT
Ah, nevermind.
Note You need to log in before you can comment on or make changes to this bug.