Source/WebKit/mac/WebCoreSupport/WebPlatformStrategies.mm
@@ -138,6 +138,11 @@ Color WebPlatformStrategies::color(const String& pasteboardName)
     return PlatformPasteboard(pasteboardName).color();    
 }
 
+KURL WebPlatformStrategies::url(const String& pasteboardName)
+{
+    return PlatformPasteboard(pasteboardName).url();
+}
+
 void WebPlatformStrategies::addTypes(const Vector<String>& pasteboardTypes, const String& pasteboardName)
 {
     PlatformPasteboard(pasteboardName).addTypes(pasteboardTypes);
